--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,11 @@
 @font-face {
+    font-family: 'Righteous';
+    src: url(../fonts/Righteous-Regular.ttf);
+}
+
+@font-face {
     font-family: 'montserrat';
-    src: url(src/fonts/Montserrat-Medium.ttf);
+    src: url(../fonts/Montserrat-Medium.ttf);
 }
 
 * {
@@ -14,7 +19,8 @@ html {
 }
 
 body {
-    font-family: 'montserrat';
+    font-family: 'Righteous';
+    font-weight: normal;
     font-size: 1.3em;
     background-color: #5050509c;
     backdrop-filter: blur(5px);
@@ -66,13 +72,20 @@ body {
 }
 
 h1, h2 {
+    font-weight: normal;
     color: white;
     text-decoration: none;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.397);
 }
 
-a {
+#foot h2 {
+    font-size: 150%;
+}
+
+#foot a {
     text-decoration: none;
+    height: 80%;
+    width: 40%;
 }
 
 #quadro {
@@ -80,6 +93,11 @@ a {
     justify-content: center;
     height: 70%;
     width: 80%;
+    font-family: 'montserrat';
+}
+
+#quadro h1 {
+    font-family: "Righteous";
 }
 
 #inicio {
@@ -89,7 +107,7 @@ a {
     flex-direction: column;
     height: 100%;
     width: 33%;
-    background-color: rgb(12, 56, 122);
+    background: linear-gradient(0deg, #0f0f64, #2043b6);
     border-radius: 20px 0px 0px  20px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.397);
 }
@@ -101,7 +119,7 @@ a {
     flex-direction: column;
     height: 100%;
     width: 33%;
-    background-color: #c42746;
+    background: linear-gradient(0deg, #640f0f, #b62020);
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.397);
 }
 
@@ -113,13 +131,15 @@ a {
     height: 100%;
     width: 33%;
     background-color: #EFF1F0;
+    background-image: url(../imgs/fundoBranco.jpg);
+    background-size: cover;
     border-radius: 0px 20px 20px 0px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.397);
 }
 
 .postIt {
-    height: 30%;
-    width: 40%;
+    height: 18%;
+    width: 30%;
     padding: 20px;
     outline: none;
     background-color: rgb(255, 228, 72);
@@ -128,10 +148,10 @@ a {
 
 .postItMeio {
     height: 18%;
-    width: 40%;
+    width: 30%;
     padding: 20px;
     outline: none;
-    background-color: rgb(135, 255, 135);
+    background-color: rgb(166, 118, 255);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.397);
 }
 
@@ -151,8 +171,6 @@ a {
     padding: 10px;
     border-radius: 20px;
     background-color: #3f3f3f;
-    width: fit-content;
-    gap: 20px;
     transition-duration: 0.3s;
 }
 
